Combobox: overlay position not aligned correctly (Safari) #936

--- a/src/less/combobox/base/combobox.less
+++ b/src/less/combobox/base/combobox.less
@@ -86,6 +86,8 @@ span.combobox {
     height: @combobox-input-height;
     padding: @combobox-input-padding;
     text-align: left;
+    margin-left: 0;
+    margin-right: 0;
 
     &[readonly] {
         // fixes the cursor in firefox (1 of 2)
